# idgenerator

./: CHANGELOG.md  Cargo.toml  README.md  deprecated.md
.github/: dependabot.yml
.github/workflows/: cargo-lint.yml  cargo-test.yml  changelog.yml  manual.yml
benches/: id_bench.rs
examples/: multiple.rs  single.rs
src/: error.rs  generator.rs  instance.rs  lib.rs  options.rs
src/idgen/: default_id_generator.rs  id_generator.rs  id_generator_options.rs  id_helper.rs  mod.rs  snow_worker_m1.rs
