[package]
name = "idgenerator"
version = "2.0.0"
authors = ["BobAnkh <bobankhshen@gmail.com>"]
edition = "2018"
license = "MIT"
description="A powerful unique id generator. Shorter ID and faster generation with a new snowflake drift algorithm. The core is to shorten the ID length, but also can have a very high instantaneous concurrent processing capacity, and powerful configuration capacity."
readme = "README.md"
homepage ="https://github.com/BobAnkh/idgenerator"
repository = "https://github.com/BobAnkh/idgenerator"
keywords = ["snowflake", "idgenerator", "id", "generator", "algorithms"]
documentation = "https://docs.rs/idgenerator"
categories = ["algorithms"]

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "id_bench"
harness = false

[dependencies]
chrono = "0.4"
# lazy_static = "1.4"
parking_lot = "0.12"
once_cell = "1.8"
thiserror = "2.0"
